# AgentReliabilityLab

./: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
apps/api/: Dockerfile  main.py  requirements.txt
apps/api/routers/: evals.py  hitl.py  leaderboard.py  policy.py  replay.py  runs.py  traces.py
apps/web/: package.json  tailwind.config.js
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/hitl/: page.tsx
apps/web/app/leaderboard/: page.tsx
apps/web/app/policy/: page.tsx
apps/web/app/runs/: page.tsx
apps/web/app/runs/[id]/: page.tsx
apps/web/components/: Badge.tsx  Card.tsx  Sidebar.tsx
apps/web/lib/: api.ts
benchmarks/enterprise_rag/: corpus.json  run_benchmark.py  tasks.json
benchmarks/github_security/: run_benchmark.py  tasks.json
benchmarks/github_security/repos/safe_app/: app.py  requirements.txt
benchmarks/github_security/repos/vulnerable_app/: app.py  auth.py  requirements.txt
benchmarks/sql_agent/: benchmark.db  run_benchmark.py  schema.sql  seed_data.sql  tasks.json
data/: arl.db  test_arl.db
data/reports/: sql_benchmark.json
scripts/: seed_databases.py
tests/: conftest.py  test_api.py  test_evals.py  test_policies.py  test_sql_benchmark.py  test_tracing.py
